# maestro-dl-manager

./: .gitignore  Dockerfile-gpu  Dockerfile-gpu-alt  Dockerfile-no-gpu  MANIFEST.in  README.md  docker-compose-gpu-alt.yml  docker-compose-gpu.yml  docker-compose-no-gpu.yml  prepare_docker_for_gpu.sh  pyproject.toml  requirements.txt  server.crt  server.key  setup.py
dl_manager/: __init__.py  __main__.py  accelerator.pyi  checkpointing.py  cli.py  config.py  custom_kfold.py  data_manager.py  data_manager_bootstrap.py  data_splitting.py  data_utilities.py  db_util.py  endpoints.py  kfold.py  kw_analyzer.py  learning.py  logger.py  model_io.py  model_manager.py  prediction.py  run_identifiers.py  stacking.py  voting_util.py  web_api.json  web_api.py
dl_manager/accelerator/: Cargo.toml
dl_manager/accelerator/src/: lib.rs  pos.rs  replacement.rs  text_cleaning.rs
dl_manager/accelerator/src/pos/: averaged_perceptron.rs  perceptron.rs
dl_manager/accelerator/src/replacement/: char_trie.rs  word_trie.rs
dl_manager/accelerator/src/text_cleaning/: blocks.rs  heuristic_class_names.rs  heuristic_logs.rs  jira_formatting.rs  markers.rs  misc.rs  regex_util.rs
dl_manager/classifiers/: __init__.py  bert.py  combined_model.py  fully_connected_model.py  linear_cnn_model.py  linear_rnn_model.py  model.py
dl_manager/config/: arguments.py  constraints.py  core.py  parsing.py  schemas.py
dl_manager/embeddings/: __init__.py  dictionary.py  doc2vec.py  embedding_generator.py  idf.py  util.py  word2vec.py
docs/: analysis.md  combination-strategies.md  generator-param.md  hyperparams.md  list.md  make-features.md  run.md
docs/basics/: tasks.md
utility_scripts/: README.md  compile_ontologies.py
(+43 files in other folders)
