[build-system]
    requires = ["setuptools", "setuptools-scm", "wheel", "setuptools-rust", "nltk"]
    build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
    where=["."]
    include = ["dl_manager*"]

[project]
    name = "dl_manager"
    version = "0.3.0"
    authors = [
        {name = "Jesse Maarleveld"},
        {name = "Arjan Dekker"},
    ]
    readme = "README.md"
    requires-python = ">=3.10"
    dependencies = [
        "alive_progress==2.4.1",
        "contractions==0.1.72",
        "gensim==4.1.2",
        "jira==3.2.0",
        "keras==2.11.*",
        "matplotlib==3.5.0",
        "nltk==3.7",
        "numpy==1.22.3",
        "pandas==1.3.5",
        "scikit_learn==1.2.1",
        "scipy==1.7.3",
        "seaborn==0.11.2",
        "tensorflow==2.11.0",
        "tensorflow_addons==0.20.*",
        "tensorflow_hub==0.12.0",
        "tensorflow_text==2.11.*",
        "texttable==1.6.4",
        "protobuf==3.19.*",
        "imbalanced-learn==0.10.*",
        "requests==2.28.*",
        "fastapi==0.93.*",
        "uvicorn==0.20.*",
        "transformers==4.26.1",
        "issue_db_api==0.10.*",
        "keras-tuner==1.3.5"
    ]
