[package]
name = "accelerator"
version = "0.1.0"
edition = "2021"

[lib]
name = "accelerator"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.18.0", features=["extension-module"]}
rayon = "1.7.0"
regex = "1.7.1"
lazy_static = "1.4.0"
deunicode = "1.3.3"
peekmore = "1.3.0"
